--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,2 +1,21 @@
-$text-color: #f00;
+$swal-text-color: #000;
+$swal-title-font-size: 2.5em;
+$swal-text-font-size: 1.2em;
+
+$swal-backdrop-background-color: rgba(#000, .5);
+
+$swal-container-padding: .8em 1em;
 $swal-container-background-color: #fff;
+$swal-container-border-radius: .25em;
+$swal-container-width: 60vw;
+$swal-container-height: auto;
+$swal-container-min-width: 200px;
+$swal-container-max-width: 600px;
+$swal-container-min-height: 100px;
+$swal-container-max-height: 600px;
+
+$swal-buttons-text-color: #fff;
+$swal-buttons-border-radius: .25em;
+$swal-buttons-background-color: #7066e0;
+$swal-buttons-font-size: 1em;
+$swal-buttons-padding: 10px 15px;
