--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -19,3 +19,15 @@ $swal-buttons-border-radius: .25em;
 $swal-buttons-background-color: #7066e0;
 $swal-buttons-font-size: 1em;
 $swal-buttons-padding: 10px 15px;
+
+$swal-icon-size: 110px;
+$swal-success-icon-color: #a5dc86;
+$swal-success-stroke-width: 0.2mm;
+$swal-warning-mark-color: #f8bb86;
+$swal-warning-border-color: #facea8;
+$swal-error-cross-color: #f27474;
+$swal-error-border-color: #f27474;
+$swal-info-border-color: #9de0f6;
+$swal-info-mark-color: #3fc3ee;
+$swal-question-border-color: #c9dae1;
+$swal-question-mark-color: #87adbd;
