--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -16,9 +16,11 @@ $swal-container-max-height: 600px;
 
 $swal-buttons-text-color: #fff;
 $swal-buttons-border-radius: .25em;
-$swal-buttons-background-color: #7066e0;
 $swal-buttons-font-size: 1em;
 $swal-buttons-padding: 10px 15px;
+$swal-confirm-button-background-color: #7066e0;
+$swal-deny-button-background-color: #dc3741;
+$swal-cancel-button-background-color: #6e7881;
 
 $swal-icon-size: 110px;
 $swal-success-icon-color: #a5dc86;
