Add 'animation' boolean property to SwalOptions

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -13,6 +13,7 @@ $swal-container-min-width: 200px;
 $swal-container-max-width: 600px;
 $swal-container-min-height: 100px;
 $swal-container-max-height: 600px;
+$swal-container-transition-duration: 200ms;
 
 $swal-buttons-text-color: #fff;
 $swal-buttons-border-radius: .25em;
@@ -33,3 +34,4 @@ $swal-info-border-color: #9de0f6;
 $swal-info-mark-color: #3fc3ee;
 $swal-question-border-color: #c9dae1;
 $swal-question-mark-color: #87adbd;
+$swal-rounded-icons-border-width: 5px;
