--- a/styles/sweetalert-core.scss
+++ b/styles/sweetalert-core.scss
@@ -11,7 +11,10 @@
     overflow-x: hidden;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 200ms ease;
+
+    &:not(.swal-no-animation) {
+        transition: opacity $swal-container-transition-duration ease;
+    }
 
     &[aria-hidden="false"] {
         pointer-events: auto;
@@ -101,9 +104,76 @@
 }
 
 .swal-container-icon {
-    animation: fadeIn 500ms forwards 1 ease-out;
     width: $swal-icon-size;
     height: $swal-icon-size;
+
+    .success-icon {
+        width: inherit;
+        height: inherit;
+        stroke: $swal-success-icon-color;
+        stroke-width: $swal-success-stroke-width;
+        fill: $swal-success-icon-color;
+    }
+
+    .swal-rounded-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: inherit;
+        height: inherit;
+        border-radius: 50%;
+        box-sizing: border-box;
+        border-width: $swal-rounded-icons-border-width;
+
+        svg {
+            width: $swal-icon-size - 60px;
+            height: $swal-icon-size - 60px;
+        }
+    }
+
+    .swal-warning-icon {
+        border-style: solid;
+        border-color: $swal-warning-border-color;
+
+        svg path {
+            fill: $swal-warning-mark-color;
+        }
+    }
+
+    .swal-error-icon {
+        border-style: solid;
+        border-color: $swal-error-border-color;
+
+        path {
+            fill: $swal-error-cross-color;
+        }
+    }
+
+    .swal-info-icon {
+        border-style: solid;
+        border-color: $swal-info-border-color;
+
+        path {
+            fill: $swal-info-mark-color;
+        }
+    }
+
+    .swal-question-icon {
+        border-style: solid;
+        border-color: $swal-question-border-color;
+
+        path {
+            stroke: $swal-question-mark-color;
+            stroke-width: 2px;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+        }
+    }
+}
+
+// The styles specific to the icons' animations
+.swal-backdrop:not(.swal-no-animation) .swal-container-icon {
+    animation: fadeIn 500ms forwards 1 ease-out;
 
     @keyframes fadeIn {
         from {
@@ -131,10 +201,6 @@
     }
 
     .success-icon {
-        width: inherit;
-        height: inherit;
-        stroke: $swal-success-icon-color;
-        stroke-width: $swal-success-stroke-width;
         fill: transparent;
 
         path {
@@ -151,19 +217,7 @@
     }
 
     .swal-rounded-icon {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: inherit;
-        height: inherit;
-        border-radius: 50%;
-        box-sizing: border-box;
         animation: flip 300ms 1 ease-in forwards;
-
-        svg {
-            width: $swal-icon-size - 60px;
-            height: $swal-icon-size - 60px;
-        }
 
         @keyframes flip {
             from {
@@ -176,84 +230,49 @@
         }
     }
 
-    .swal-warning-icon {
-        border: 5px solid $swal-warning-border-color;
+    .swal-warning-icon svg {
+        animation: bouncing 300ms 200ms 1 ease-out forwards;
+    }
 
-        svg {
-            animation: bouncing 300ms 200ms 1 ease-out forwards;
+    .swal-error-icon svg {
+        opacity: 0;
+        transform: scale(0.5);
+        animation: expanding 400ms 200ms 1 ease-out forwards;
 
-            path {
-                fill: $swal-warning-mark-color;
+        @keyframes expanding {
+            50% {
+                opacity: 0.8;
+            }
+
+            60% {
+                transform: scale(1.1);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1.0);
             }
         }
     }
 
-    .swal-error-icon {
-        border: 5px solid $swal-error-border-color;
-
-        svg {
-            opacity: 0;
-            transform: scale(0.5);
-            animation: expanding 400ms 200ms 1 ease-out forwards;
-
-            @keyframes expanding {
-                50% {
-                    opacity: 0.8;
-                }
-
-                60% {
-                    transform: scale(1.1);
-                }
-
-                to {
-                    opacity: 1;
-                    transform: scale(1.0);
-                }
-            }
-        }
-
-        path {
-            fill: $swal-error-cross-color;
-        }
+    .swal-info-icon svg {
+        animation: bouncing 500ms 200ms 1 ease forwards;
     }
 
-    .swal-info-icon {
-        border: 5px solid $swal-info-border-color;
+    .swal-question-icon svg {
+        opacity: 0;
+        transform: rotateY(90deg);
+        animation: rotate 400ms 200ms 1 ease-out forwards;
 
-        svg {
-            animation: bouncing 500ms 200ms 1 ease forwards;
-        }
-
-        path {
-            fill: $swal-info-mark-color;
-        }
-    }
-
-    .swal-question-icon {
-        border: 5px solid $swal-question-border-color;
-
-        svg {
-            opacity: 0;
-            transform: rotateY(90deg);
-            animation: rotate 400ms 200ms 1 ease-out forwards;
-
-            @keyframes rotate {
-                50% {
-                    opacity: 0.8;
-                }
-
-                100% {
-                    opacity: 1;
-                    transform: rotateY(0deg);
-                }
+        @keyframes rotate {
+            50% {
+                opacity: 0.8;
             }
-        }
 
-        path {
-            stroke: $swal-question-mark-color;
-            stroke-width: 2px;
-            stroke-linecap: round;
-            stroke-linejoin: round;
+            100% {
+                opacity: 1;
+                transform: rotateY(0deg);
+            }
         }
     }
 
